/*
 * $Id: ChangeLog,v 1.16 2002/01/04 07:15:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-01-04 09:49 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c
    + Added more security logic to hb_itemVarAssign()

2002-01-03 23:09 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  * include/hbfast.h
  * source/vm/fastitem.c
    + Added void hb_itemVarAssign( PHB_ITEM pVar )

  * source/vm/eval.c
  * source/vm/hvm.c
    ! More optimizations.

2002-01-03 17:33 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  *  xharbour/source/vm/fastitem.c
  *  xharbour/source/vm/hvm.c
     ! More speed optimizations.

     /* xHarbour executables are now about 30% faster than Harbour executables. */

  *  xharbour/tests/pp.prg
  *  xharbour/tests/pp_harb.ch
     ! Fixed C functions to use itemapi instead of direct access.

2002-01-03 08:00 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
     * updated the date
   * utils/hbmake/hbmutils.prg
    * Reupdaload again, the function Getlibs() is in this module

2002-01-02 22:22 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  * xharbour/source/vm/classes.c
  * xharbour/source/vm/garbage.c
  * xharbour/source/vm/hvm.c
    * Further optimization/cleanup to garbage collection.

2002-01-02 20:11 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  * xharbour/source/rtl/filesys.c
    ! Changed #ifdef __WIN32__ to #ifdef X__WIN32__ to disable win32 logic, which is still broken.

  * xharbour/utils/hbmake/hbmake.prg
    ! Commented out line 1107 :
        aLibs:=Getlibs( lgcc ,GetMakeDir()+'\lib')
      because it refrences a non existent function GetLibs().

    /* Luiz, please fix this, as hbmake can not be used now. */


2002-01-02 19:25 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
  * xharbour/source/vm/itemapi.c
  * xharbour/include/hbapiitm.h