@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.16 2002/01/04 07:15:20 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.17 2002/01/04 17:56:12 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2002-01-05 04:30:00 UTC+0700 Andi Jahja <andijahja@cbn.net.id>
+   * include/hbapiitm.h
+     + function declarations fron fastitem.c
+   * source/rtl/strcase.c
+     * added typecast
 
 2002-01-04 09:49 UTC+0100 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/fastitem.c
